--- a/curriculo.html
+++ b/curriculo.html
@@ -6,6 +6,11 @@
     <title>Curriculo da Mariah</title>
 </head>
 <body>
+    <ul>
+    <li>
+<a href="index.html">Voltar para o index</a>
+    </li>
+    </ul>
     <section>
     <H1 style="text-align: center;" >Mariazeu</H1>
     <div style="text-align: center;">
