--- a/index.html
+++ b/index.html
@@ -42,6 +42,9 @@
 <ul><li style="text-align: center;">Oficina de Slime</li>
 <li style="text-align: center;"> Gastronomia</li></ul>
 </section>
-
+<ul>
+    <li>
+<a href="curriculo.html">Voltar para o curriculo</a>
+    </li>
 </body>
 </html>
