--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 </section>
 <ul>
     <li>
-<a href="currículo.html">Voltar para o curriculo</a>
+<a href="curriculo.html">Voltar para o curriculo</a>
     </li>
 </body>
 </html>
