--- a/index.html
+++ b/index.html
@@ -46,5 +46,6 @@
     <li>
 <a href="curriculo.html">Voltar para o curriculo</a>
     </li>
+    <a href="cadastro.html" ir para o cadastro </a>
 </body>
 </html>
