--- a/index.html
+++ b/index.html
@@ -51,6 +51,12 @@
         <li>
 <a href="cadastro.html"> ir para o cadastro </a>
         </li>
+           <li>
+<a href="sobre.html"> Descubra sobre nós </a>
+        </li>
+         <li>
+<a href="produtos.html"> va para produtos </a>
+        </li>
     </ul>
 </body>
 </html>
