--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 <a href="sobre.html"> Descubra sobre nós </a>
         </li>
          <li>
-<a href="produtos.html"> va para produtos </a>
+<a href="produto.html"> va para produtos </a>
         </li>
     </ul>
 </body>
