--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
          <li>
 <a href="produto.html"> va para produtos </a>
         </li>
+        <ul><li><a href="parceiros.html"> va para produtos </a></li></ul>
     </ul>
 </body>
 </html>
