--- a/parceiros.html
+++ b/parceiros.html
@@ -35,8 +35,10 @@
 <li><a href="https://www.accuweather.com/"> Ir para o accuweather</a>
 </li>
 </ul>
-
-
+<ul>
+    <li>
+<a href="index.html">Volar para index</a>
+</li>
 
 
 
