--- a/index.html
+++ b/index.html
@@ -61,7 +61,10 @@
          <li>
 <a href="produto.html"> va para produtos </a>
         </li>
-        <ul><li><a href="parceiros.html"> va para produtos </a></li></ul>
+        <ul>
+            <li><a href="parceiros.html"> va para parceiros </a>
+            </li>
+        </ul>
     </ul>
 </body>
 </html>
