--- a/index.html
+++ b/index.html
@@ -63,10 +63,11 @@
              
         </li>
     </ul>
-        <ul>
-            <li><a href="parceiros.html"> va para parceiros </a>
-            </li>
-        </ul>
+    <ul>
+     <li>
+         <a href="parceiros.html"> va para parceiros </a>
+     </li>
+    </ul>
     
 </body>
 </html>
