--- a/Site.html
+++ b/Site.html
@@ -3,53 +3,47 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Bem-vindo à Veyr Soluções</title>
 </head>
 <body>
+    <!-- Menu de navegação -->
+    <nav>
+        <ul>
+            <li><a href="#inicio">Início</a></li>
+            <li><a href="#sobre">Sobre Nós</a></li>
+            <li><a href="#servicos">Serviços</a></li>
+            <li><a href="#contato">Contato</a></li>
+            <li><a href="curriculo.html">Currículo</a></li>
+            <li><a href="produto.html">Produtos</a></li>
+            <li><a href="cadastro.html">Cadastro</a></li>
+            <li><a href="parceiros.html">Parceiros</a></li>
+            <li><a href="sobre.html">Descubra sobre nós</a></li>
+        </ul>
+    </nav>
+
+    <!-- Apresentação da empresa -->
+    <h1 id="inicio">Veyr Soluções</h1>
+    <img src="https://images.unsplash.com/photo-1461749280684-dccba630e2f6?auto=format&fit=crop&w=600&q=80" alt="Equipe da empresa" width="400">
+    <p>Bem-vindo à Veyr Soluções, referência em inovação e tecnologia para o seu negócio. Nossa missão é transformar ideias em resultados, oferecendo soluções personalizadas para empresas de todos os portes.</p>
+
+    <!-- Sobre Nós -->
+    <h2 id="sobre">Sobre Nós</h2>
+    <img src="https://images.unsplash.com/photo-1506744038136-46273834b3fb?auto=format&fit=crop&w=600&q=80" alt="Escritório moderno" width="400">
+    <p>Fundada em 2010, a Veyr Soluções conta com uma equipe multidisciplinar, apaixonada por tecnologia e comprometida com a excelência. Atuamos em diversos segmentos, sempre buscando superar as expectativas dos nossos clientes.</p>
+
+    <!-- Serviços -->
+    <h2 id="servicos">Nossos Serviços</h2>
     <ul>
-        <li>
-    <a href="curriculo.html">Ir para o currículo</a>
-    </li>
-    <li>
-<a href="produto.html"> Ir para produtos</a>
-</li>
-<li>
-    <a href="cadastro.html"> Ir para cadastro</a>
-</li>
-<li>
-<a href="parceiros.html">Ir para parceiros</a></li>
-<li>
-    <a href="sobre.html">Descubra sobre nós</a>
- </li>
-</li>
-
-    </li>
+        <li>Desenvolvimento de sistemas sob medida</li>
+        <li>Consultoria em TI</li>
+        <li>Gestão de projetos</li>
+        <li>Suporte técnico especializado</li>
     </ul>
+    <img src="https://images.unsplash.com/photo-1519389950473-47ba0277781c?auto=format&fit=crop&w=600&q=80" alt="Equipe trabalhando" width="400">
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+    <!-- Contato -->
+    <h2 id="contato">Fale Conosco</h2>
+    <p>Entre em contato pelo e-mail: <a href="mailto:contato@veyr.com">contato@veyr.com</a></p>
+    <p>Ou visite nossa página de <a href="cadastro.html">cadastro</a> para enviar uma mensagem.</p>
 </body>
 </html>
