--- a/produto.html
+++ b/produto.html
@@ -1,25 +1,50 @@
+<h1>Produtos</h1>
+<table border="1">
+    <tr>
+        <th>Produto</th>
+        <th>Imagem</th>
+        <th>Detalhes</th>
+    </tr>
+    <tr>
+        <td>Produto 1</td>
+        <td>
+            <a href="produto2.html">
+                <img src="https://via.placeholder.com/100x100?text=Produto+1" alt="Produto 1">
+            </a>
+        </td>
+        <td><a href="produto2.html">Ver detalhes</a></td>
+    </tr>
+    <tr>
+        <td>Produto 2</td>
+        <td>
+            <a href="produto3.html">
+                <img src="https://via.placeholder.com/100x100?text=Produto+2" alt="Produto 2">
+            </a>
+        </td>
+        <td><a href="produto3.html">Ver detalhes</a></td>
+    </tr>
+    <tr>
+        <td>Produto 3</td>
+        <td>
+            <a href="produto4.html">
+                <img src="https://via.placeholder.com/100x100?text=Produto+3" alt="Produto 3">
+            </a>
+        </td>
+        <td><a href="produto4.html">Ver detalhes</a></td>
+    </tr>
+    <tr>
+        <td>Produto 4</td>
+        <td>
+            <a href="produto5.html">
+                <img src="https://via.placeholder.com/100x100?text=Produto+4" alt="Produto 4">
+            </a>
+        </td>
+        <td><a href="produto5.html">Ver detalhes</a></td>
+    </tr>
+</table>
+<br>
 <ul>
     <li>
-<a href="index.html">Voltar para o index</a>
+        <a href="index.html">Voltar para o index</a>
     </li>
-</ul>
-<ul>
-<li>
-<a href="produto2.html"> Ir para produto 2</a>
-</li>
-</ul>
-<ul>
-<li>
-    <a href="produto3.html"> Ir para produto 3</a>
-</li>
-</ul>
-<ul>
-<li>    <a href="produto4.html"> Ir para produto 4</a>
-</li>
-</ul>
-<ul>
-<li>
-        <a href="produto5.html"> Ir para produto 5</a>
-
-</li>
 </ul>
