--- a/cadastro.html
+++ b/cadastro.html
@@ -1,1 +1,15 @@
-<a href="index.html">Volar para index</a>
+<h1>Cadastro</h1>
+<form action="#" method="post">
+    <label for="nome">Nome:</label><br>
+    <input type="text" id="nome" name="nome" required><br><br>
+
+    <label for="email">E-mail:</label><br>
+    <input type="email" id="email" name="email" required><br><br>
+
+    <label for="mensagem">Mensagem:</label><br>
+    <textarea id="mensagem" name="mensagem" rows="4" cols="40" required></textarea><br><br>
+
+    <input type="submit" value="Enviar">
+</form>
+<br>
+<a href="index.html">Voltar</a>
