--- a/index.html
+++ b/index.html
@@ -64,6 +64,12 @@
         </li>
     </ul>
     <ul>
+         <li>
+<a href="Site.html"> va para site </a>
+             
+        </li>
+    </ul>
+    <ul>
      <li>
          <a href="parceiros.html"> va para parceiros </a>
      </li>
